--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
-  "name": "first-app",
+  "name": "covid-tracker",
   "version": "0.1.0",
   "private": true,
+  "author": {
+    "name": "Avudaiappan",
+    "email": "avudaiappan.cse@gmail.com"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -9,8 +13,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
-    "vue": "^2.6.11",
-    "vue-number-animation": "^1.0.5"
+    "vue": "^2.6.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.4.0",
